# Creon

./: README.md  creon_config.json  pyproject.toml
src/creon/: main.py
src/creon/core/: config.py  storage.py  theme_manager.py
src/creon/models/: finance.py
src/creon/views/: components.py  main_window.py  styles.py
tests/: test_gui.py  test_logic.py
